responsive test commit

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -778,7 +778,7 @@
         <script src="../js/footerAOS.js"></script>
 
         <!-- adjust section height without toolbar when window is resized -->
-        <script src="../js/responsiveHeight.js"></script>
+        <!-- <script src="../js/responsiveHeight.js"></script> -->
       </section>
     </div>
   </body>
