update coding portfolio
fix home design /
add content in implement section

--- a/my_project/kkh/html/index.html
+++ b/my_project/kkh/html/index.html
@@ -48,12 +48,12 @@
       <!-- title -->
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
         <div class="row intro-section">
+          <div class="left-deco deco"></div>
+          <div class="right-deco deco"></div>
           <h1 class="fw-bold">Coding portfolio</h1>
           <div class="col-6 left-intro rounded-3">
             <div class="title-margin"></div>
             <div class="text-box">
-              <br />
-              <br />
               <p>코딩공부를 하며 겪은 여러가지 지식과 경험</p>
               <br />
               <p>
@@ -63,7 +63,6 @@
             </div>
           </div>
           <div class="col-6 right-intro rounded-3">
-            <div class="title-margin"></div>
             <div class="deco-circle"></div>
             <div class="text-box">
               <p>이전에 겪었던 경험이 문제 해결에 도움이 된 사례</p>
@@ -80,12 +79,8 @@
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
         <div class="algorithm-section sc rounded-3 row">
           <div class="img-box col-4 bg-white rounded-3">
-            <img class="img1" src="../img/algorithm.PNG" alt="algorithm" />
-            <img
-              class="img2"
-              src="../img/data structure.PNG"
-              alt="data-structure"
-            />
+            <div class="inner-img img1"></div>
+            <div class="inner-img img2"></div>
           </div>
           <div class="text-box col-8">
             <h2 class="fw-bold">알고리즘과 자료구조 공부</h2>
