--- a/my_project/kkh/html/algorithm.html
+++ b/my_project/kkh/html/algorithm.html
@@ -92,7 +92,49 @@
                 id="imp-sc1"
                 style="cursor: pointer"
               >
-                Find regularity, repeatability of data
+                Important data
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc2"
+                style="cursor: pointer"
+              >
+                Repeating data
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc3"
+                style="cursor: pointer"
+              >
+                Data control
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc4"
+                style="cursor: pointer"
+              >
+                Math
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc5"
+                style="cursor: pointer"
+              >
+                Logic
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc6"
+                style="cursor: pointer"
+              >
+                Big-O
+              </li>
+              <li
+                class="imp-sc pb-2 gray-li"
+                id="imp-sc7"
+                style="cursor: pointer"
+              >
+                Data structure
               </li>
             </ul>
           </div>
@@ -378,29 +420,171 @@
           <h2>구현</h2>
           <p>기본적인 문제 풀이를 위해 생각해야 할 요소들</p>
 
-          <!-- regularity, repeatability -->
+          <!-- Immportant data -->
           <div id="imp-scroll1"></div>
           <section class="sm-sc">
-            <h3>데이터의 규칙성, 반복성 찾기</h3>
-            <p>
-              데이터가 너무 커지거나 많아지면 불필요한 데이터는 날리고 필요한
-              데이터만 뽑아서 사용한다
-            </p>
             <br />
-            <h3>1. 필요한 데이터만 뽑아내기</h3>
+            <h3>필요한 데이터만 뽑아내기</h3>
             <hr />
+
+            <h5>거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
+            <br />
             <p>
-              <a href="https://www.acmicpc.net/problem/1009"
-                >백준 1004번 문제</a
+              <a href="https://www.acmicpc.net/problem/1009" target="_blank"
+                >백준 1009번 문제</a
               >
             </p>
-            <p>거듭제곱의 1의 자리수를 빠르게 찾는 문제</p>
+            <br />
             <p>거듭 제곱할 수록 수가 커지기 때문에 연산이 오래 걸린다</p>
             <p>
+              거듭 제곱 연산 대신 1의 자리수만을 구하기 위한 데이터를 추출한다
+            </p>
+            <br />
+            <div class="bg-dark text-white rounded-1 code">
               1의 자리수를 결정하는 요소는 거듭 제곱할 수의 1의 자리수 뿐이기
               때문에 10의 자리 이상의 수는 필요가 없다
+              <br />
+              <br />
+              따라서 거듭 제곱 연산을 할 때마다 10의 자리 이상의 수를 제거하면
+              된다
+              <br />
+              <br />
+              ex)
+              <br />
+              <p>&#9;</p>
+              2**2 = 4
+              <br />
+              <p>&#9;</p>
+              2**3 = 2**2 * 2 = 4 * 2 = 8
+              <br />
+              <p>&#9;</p>
+              2**4 = 2**3 * 2 = 16 -> 6
+              <br />
+              <p>&#9;</p>
+              2**5 = 2**4 * 2 -> 6 * 2 = 12 -> 2
+              <br />
+              <p>&#9;</p>
+              <span class="text-success"
+                >// (2**4 는 16이고 10의 자릿수는 1의 자리수에 영향을 주지 않기
+                때문에 제외하고 6만 남긴다)</span
+              >
+              <br />
+              <p>&#9;</p>
+              2**6 = 2**5 * 2 -> 2 * 2 = 4
+              <br />
+              <p>&#9;</p>
+              ...
+              <br />
+              <br />
+              <p>&#9;</p>
+
+              정답이 나올 때까지 연산을 반복한다
+            </div>
+            <p>
+              정답을 찾기 위해 모든 데이터가 필요하지 않을 수 있으며, 그 중
+              악영향을 미치는 데이터도 있을 수 있다
             </p>
-            <div class="bg-dark text-white rounded-1 code"></div>
+            <br /><br /><br /><br />
+
+            <h5>팩토리얼 뒤에서부터 0의 개수를 빠르게 찾는 문제</h5>
+            <br />
+            <p>
+              <a href="https://www.acmicpc.net/problem/1676" target="_blank"
+                >백준 1676번 문제</a
+              >
+            </p>
+            <br />
+            <p>
+              팩토리얼을 그대로 연산하면 수가 너무 커지기 때문에 연산이 느려진다
+            </p>
+            <p>
+              팩토리얼을 그대로 연산하는 대신 0의 개수를 구하기 위한 데이터를
+              추출한다
+            </p>
+            <div class="bg-dark text-white rounded-1 code">
+              뒤에서부터 0의 개수를 결정하는 요인은 10의 거듭 제곱 수이다
+              <br /><br />
+              10은 2*5 이기 때문에, 10의 거듭 제곱 수를 구하기 위해선 2와 5의
+              거듭 제곱 수를 구하면 된다
+              <br /><br />
+              모든 팩토리얼 값은 2의 거듭 제곱 수가 5의 거듭 제곱 수보다 크다
+              <br /><br />
+              따라서 5의 거듭 제곱 수가 10의 거듭 제곱 수와 같다
+              <br /><br />
+              ex)
+              <br />
+              <p>&#9;</p>
+              10! = 2 * 3 * 4 * 5 * 6 ...
+              <br />
+              <p>&#9;</p>
+              10! = 2 * 3 * 2*2 * 5 * 2 * 3 ...
+              <br />
+              <p>&#9;</p>
+              10! = 5**2 * ...
+              <br />
+              <p>&#9;</p>
+              10! 의 뒤에서부터 0의 개수는 5의 거듭 제곱 수인 2이다
+            </div>
+            <p>
+              특정 데이터를 효율적으로 얻기 위해선 어떤 데이터가 필요한지
+              분석해야 한다
+            </p>
+          </section>
+
+          <!-- Repeating data -->
+          <div id="imp-scroll2"></div>
+          <section class="sm-sc">
+            <br />
+            <h3>데이터의 규칙성 찾기</h3>
+            <hr />
+
+            <h5>거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
+            <br />
+            <p>
+              <a href="https://www.acmicpc.net/problem/1009" target="_blank"
+                >백준 1009번 문제</a
+              >
+            </p>
+            <br />
+            <p>이전 문제와 같은 문제이다</p>
+            <p>거듭 제곱을 하면서 데이터의 규칙성이 있는지 확인한다</p>
+            <br />
+            <div class="bg-dark text-white rounded-1 code">
+              1의 자리수를 결정하는 요소는 거듭 제곱할 수의 1의 자리수 뿐이기
+              때문에 10의 자리 이상의 수는 필요가 없다
+              <br /><br />
+              규칙성을 찾기 위해 1의 자리수의 거듭 제곱 수들의 1의 자리수를 직접
+              구해본다
+              <br /><br />
+              0 -> 0 -> 0 -> ...
+              <br />
+              1 -> 1 -> 1 -> ...
+              <br />
+              0과, 1은 변화가 없다
+              <br /><br />
+              2 -> 4 -> 8 -> 6 -> 2 -> 4 -> ...
+              <br />
+              2는 4개의 수열이 반복적으로 나타나는 것을 확인할 수 있다
+              <br /><br />
+              3 -> 9 -> 7 -> 1 -> 3 -> ...
+              <br />
+              다른 수들도 마찬가지이며 다시 본인의 수로 돌아오는 수열이
+              반복적으로 나타난다
+              <br /><br />
+              0 부터 9까지 모든 수의 거듭 제곱 수의 1의 자리 수열을 구하고
+              정답을 찾는다
+              <br /><br />
+              ex)
+              <br />
+              <p>&#9;</p>
+              2**101 = (2**4)**25 * 2
+              <br />
+              2**4 는 모든
+            </div>
+            <p></p>
+            <br /><br /><br /><br />
+
+            <div class="space-box"></div>
           </section>
 
           <script src="../js/scrollEvent.js"></script>
