update my portfolio
add AOS in header logo

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -146,12 +146,12 @@
             </ul>
           </div>
           <div class="text-box">
-            <h2 class="head-left head1"><span>L</span>og<span>i</span>c.</h2>
-            <h2 class="head-right head2">
-              Modu<span>l</span>ar<span>i</span>ze.
-            </h2>
-            <h2 class="head-left head3">Open M<span>i</span>nd.</h2>
+            <h2 class="head1"><span>L</span>og<span>i</span>c.</h2>
+            <h2 class="head2">Modu<span>l</span>ar<span>i</span>ze.</h2>
+            <h2 class="head3">Open M<span>i</span>nd.</h2>
           </div>
+
+          <script src="../js/headerAOS.js"></script>
         </section>
 
         <!-- info -->
