--- a/my_project/kkh/html/algorithm.html
+++ b/my_project/kkh/html/algorithm.html
@@ -427,7 +427,7 @@
             <h3>필요한 데이터만 뽑아내기</h3>
             <hr />
 
-            <h5>거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
+            <h5>1) 거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
             <br />
             <p>
               <a href="https://www.acmicpc.net/problem/1009" target="_blank"
@@ -486,7 +486,7 @@
             </p>
             <br /><br /><br /><br />
 
-            <h5>팩토리얼 뒤에서부터 0의 개수를 빠르게 찾는 문제</h5>
+            <h5>2) 팩토리얼 뒤에서부터 0의 개수를 빠르게 찾는 문제</h5>
             <br />
             <p>
               <a href="https://www.acmicpc.net/problem/1676" target="_blank"
@@ -529,6 +529,8 @@
               특정 데이터를 효율적으로 얻기 위해선 어떤 데이터가 필요한지
               분석해야 한다
             </p>
+
+            <div class="space-box"></div>
           </section>
 
           <!-- Repeating data -->
@@ -538,7 +540,7 @@
             <h3>데이터의 규칙성 찾기</h3>
             <hr />
 
-            <h5>거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
+            <h5>1) 거듭제곱의 1의 자리수를 빠르게 찾는 문제</h5>
             <br />
             <p>
               <a href="https://www.acmicpc.net/problem/1009" target="_blank"
@@ -574,15 +576,189 @@
               0 부터 9까지 모든 수의 거듭 제곱 수의 1의 자리 수열을 구하고
               정답을 찾는다
               <br /><br />
-              ex)
+              ex) 2**101
               <br />
-              <p>&#9;</p>
+              <br />
               2**101 = (2**4)**25 * 2
               <br />
-              2**4 는 모든
+              <br />
+              2의 거듭 제곱의 1의 자리수는 4개의 수열이 반복되므로, 2**4 는 1의
+              자리수에 영향을 미치지 않는다
+              <br />
+              <br />
+              (2**4)**25 * 2 -> 6 * 2 -> 2
             </div>
             <p></p>
             <br /><br /><br /><br />
+
+            <h5>
+              2) 상승과 하강이 일정 주기로 반복할 때 최종 높이에 도달하는 시간을
+              빠르게 찾는 문제
+            </h5>
+            <br />
+            <p>
+              <a href="https://www.acmicpc.net/problem/2869" target="_blank"
+                >백준 2869번 문제</a
+              >
+            </p>
+            <br />
+            <p>
+              낮에 A 올라가고, 밤에 B 내려갈 때, 막대기 꼭대기까지 올라가는데
+              며칠이 걸리는지 구하는 문제
+            </p>
+            <p>
+              막대기 꼭대기까지 올라갈 때까지 하루 단위로 +A-B 계산을 반복하면
+              답을 구할 수 있다
+            </p>
+            <p>하지만 이는 매우 비효율적인 방법이다</p>
+
+            <br />
+            <div class="bg-dark text-white rounded-1 code">
+              1. 하루에 막대기를 올라가는 거리를 계산한다 (A-B)
+              <br /><br />
+              2. 하루에 A만큼 올라갈 수 있으므로, 올라가는 날 남은 거리가 A
+              이하라면 막대기 끝에 올라갈 수 있다
+              <br />
+              <br />
+              (막대기 길이) <= (하룻동안 올라가는 횟수) * (A-B) + A
+              <br /><br />
+              하룻동안 올라가는 횟수의 최솟값을 구하면 된다
+              <br /><br />
+              올라가는 일 수 = 하룻동안 올라가는 횟수 + 낮에 A만큼 올라감(1)
+              <br /><br />
+              ex) 막대기 길이 20, A = 5, B = 3
+              <br /><br />
+              20 <= (하룻동안 올라가는 횟수) * (5-3) + 5
+              <br /><br />
+              올라가는 횟수의 최솟값 = 8
+              <br /><br />
+              올라가는 일 수 = 8 + 1 = 9
+            </div>
+
+            <p>
+              A-B 의 계산을 반복하는 대신 데이터의 반복성을 찾고 A-B 의 계산이
+              몇 번 반복되는지 직접 찾아 문제를 효율적으로 풀 수 있다
+            </p>
+
+            <div class="space-box"></div>
+          </section>
+
+          <!-- Data control -->
+          <div id="imp-scroll3"></div>
+          <section class="sm-sc">
+            <br />
+            <h3>데이터의 흐름</h3>
+            <hr />
+
+            <h5>3개의 데이터를 각각 계산, 다음 데이터에 적용하는 문제</h5>
+            <br />
+            <p>
+              <a href="https://www.acmicpc.net/problem/6609" target="_blank"
+                >백준 6609번 문제</a
+              >
+            </p>
+            <br />
+            <p>
+              알, 번데기, 유충의 수를 주고 1주 단위로 바뀌는 개체 수를 각각
+              계산해야 하는 문제
+            </p>
+            <p>각각 알->번데기, 번데기->유충, 유충->알 로 개체 수가 결정된다</p>
+            <br />
+            <p>
+              다음 주에 생성될 알, 번데기, 유충의 수를 계산하고 다음 데이터에
+              적용한다
+            </p>
+            <div class="bg-dark text-white rounded-1 code">
+              1주마다 바뀌는 개체 수를 먼저 구한다
+              <br /><br />
+              알, 번데기, 유충의 수를 a, b, c 라고 할 때
+              <br /><br />
+              a, b, c 를 사용해 다음 주에 생성될 알, 번데기, 유충의 수를
+              계산하여 a', b', c' 라고 지정한다면
+              <br /><br />
+              다음주에 생성되는 알, 번데기, 유충의 수는 a', b', c' 가 된다
+              <br /><br />
+              따라서 1주마다 a, b, c 를 a', b', c' 로 갱신한다
+              <br /><br />
+              문제에서 제시했던 N번째만큼 반복하여 모기의 수(c)를 구한다
+            </div>
+            <p></p>
+
+            <div class="space-box"></div>
+          </section>
+
+          <!-- Math -->
+          <div id="imp-scroll4"></div>
+          <section class="sm-sc">
+            <br />
+            <h3>수학</h3>
+            <hr />
+
+            <h5>규칙을 가진 수열의 수를 찾는 문제</h5>
+            <br />
+            <p>
+              <a href="https://www.acmicpc.net/problem/1193" target="_blank"
+                >백준 1193번 문제</a
+              >
+            </p>
+            <br />
+            <p>
+              1/1 -> 1/2 -> 2/1 -> 3/1 -> 2/2 -> 1/3 -> 1/4 -> 2/3 -> ... 의
+              규칙을 가지는 수열의 X번째 분수를 찾는 문제
+            </p>
+            <div class="bg-dark text-white rounded-1 code">
+              분자와 분모의 합을 n 이라고 할 때
+              <br /><br />
+              x번째 분수의 n 값 구하기
+              <br />
+              x가 1 -> n이 2인 분수,
+              <br />
+              x가 2~3 -> n이 3인 분수,
+              <br />
+              x가 4~6 -> n이 4인 분수,
+              <br />
+              x가 7~10 -> n이 5인 분수이다
+              <br />
+              <br />
+              n이 2인 경우는 1개, 3인 경우는 2개, 4인 경우는 3개 ... 의 규칙을
+              가진다
+              <br />
+              따라서 n 이하의 모든 분수의 개수는 1 + 2 + 3 + 4 + ... + n-1 =
+              n(n-1)/2 이다
+              <br /><br />
+              위의 2가지 규칙으로 x에서 n 값을 바로 찾기
+              <br />
+              <br />
+              x가 7~10 인 경우
+              <br />
+              n(n-1)/2 에 x값을 직접 대입에 풀어보면,
+              <br />
+              x 가 7 ~ 10 인 경우 n 은 4초과, 5이하의 값을 가진다
+              <br />
+              이는 n이 4보다는 높은, 즉 5라는 뜻이다
+              <br />
+              x 가 7~10 인 경우 n 값은 5이다
+              <br />
+              <br />
+              즉 n(n-1)/2 = x 의 이차방정식의 n값을 반올림한 값이 x의 n 값이다
+              <br />
+              <br />
+              n 값을 찾았다면 n(n-1)/2 의 값과 x 값의 차이를 비교하여 분수를
+              직접 찾는다
+              <br />
+              <br />
+              ex) x = 14
+              <br />
+              <br />
+              n(n-1)/2 = 14 -> n = 5.~~ -> n = 6
+              <br />
+              n = 6 일 때 x의 최댓값 : 6 * 5 / 2 = 15
+              <br />
+              15번째 분수는 1/5 라는 것은 수열 규칙을 통해 알 수 있다
+              <br />
+              x와 15는 1의 차이가 나므로 x번째 분수는 2/4
+            </div>
+            <p></p>
 
             <div class="space-box"></div>
           </section>
